# advent-of-code-2016

10a/: README.md  adventofcode-10a.hs
10ab/: README.md
12ab/: 12a.cabal  README.md
12ab/src/: Main.hs
13a/: 13a.cabal  README.md
13a/src/: Main.hs
13b/: 13b.cabal  README.md
13b/src/: Main.hs
14a/: 14a.cabal  README.md
14a/src/: Main.hs
14b/: 14b.cabal  README.md
14b/src/: Main.hs
15a/: 15a.cabal
15a/src/: Main.hs
15b/: 15b.cabal  README.md
15b/src/: Main.hs
16a/: 16a.cabal  README.md
16a/src/: Main.hs
16b/: 16b.cabal  LICENSE  README.md
16b/src/: Main.hs
17a/: 17a.cabal  README.md
17a/src/: Main.hs
17b/: 17b.cabal  README.md
18a/: 18a.cabal  README.md
18b/: 18b.cabal  README.md
19a/: 19a.cabal  README.md
19b/: 19b.cabal  README.md
1a/: README.md
1b/: README.md
20a/: 20a.cabal  README.md
20b/: 20b.cabal  README.md
20b/src/: Main.hs
21a/: 21a.cabal  README.md  stack.yaml
21b/: 21b.cabal  README.md
22a/: 22a.cabal  README.md
22b/: 22b.cabal  README.md
2a/: README.md  project.clj
2b/: README.md  project.clj
3a/: README.md  project.clj
3b/: README.md  project.clj
4a/: README.md  adventofcode-4a.hs
4b/: README.md  adventofcode-4b.hs
5a/: README.md  adventofcode-5a.hs
5b/: README.md  adventofcode-5b.hs
6a/: README.md  adventofcode-6a.hs
6b/: README.md  adventofcode-6b.hs
7a/: README.md  adventofcode-7a.hs
7b/: README.md  adventofcode-7b.hs
8a/: README.md  adventofcode-8a.hs
8b/: README.md  adventofcode-8b.hs
9a/: README.md  adventofcode-9a.hs
9b/: README.md  adventofcode-9b.hs
(+20 files in other folders)
