name:                13a
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/vlki/13a#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Vlcek
maintainer:          vlki@vlki.cz
copyright:           MIT
category:            FooBarBaz
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable 13a
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       regex-pcre-builtin,
                       matrix
